--- a/src/style/GlowneScroll.css
+++ b/src/style/GlowneScroll.css
@@ -2,8 +2,8 @@
     position: relative;
     width: 100vw; 
     height: 430vh;
-    clip-path: polygon(0 20vh, 100% 0, 100% 100%, 0 100%);
-    background-color: rgb(142, 168, 223);  
+    clip-path: polygon(0 30vh, 100% 10vh, 100% 100%, 0 100%);
+    background-color: rgb(253, 253, 253);  
 }
 .scrollView{
     position: sticky;
@@ -14,7 +14,7 @@
 .scrollMover{
     display: flex;
     transform: translateX(0px); 
-    width: 500vw; 
+    width: 400vw; 
     animation: move-x linear forwards;
     animation-timeline: view();
     animation-range: contain 10% contain 100%;   
@@ -25,6 +25,6 @@
     transform: translateX(0);
   }
   to{
-    transform: translateX(-400vw);
+    transform: translateX(-300vw);
   }
 }
